// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderedList /> can have a list style 1`] = `
<ol
  class="sc-dmqHEX EMvmD sc-hLseeU jgcRss sc-hLseeU jgcRss"
>
  <li
    class="sc-beqWaB cTtZtu"
  >
    <span
      class="sc-gueYoa gGRAZe"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="sc-beqWaB cTtZtu"
  >
    <span
      class="sc-gueYoa gGRAZe"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;

exports[`<OrderedList /> can have a list style 2`] = `
<ol
  class="sc-dmqHEX EMvmD sc-hLseeU djmkiA sc-hLseeU djmkiA"
>
  <li
    class="sc-beqWaB cTtZtu"
  >
    <span
      class="sc-gueYoa gGRAZe"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="sc-beqWaB cTtZtu"
  >
    <span
      class="sc-gueYoa gGRAZe"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;

exports[`<OrderedList /> renders 1`] = `
<ol
  class="sc-dmqHEX EMvmD sc-hLseeU jgcRss sc-hLseeU jgcRss"
>
  <li
    class="sc-beqWaB cTtZtu"
  >
    <span
      class="sc-gueYoa gGRAZe"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="sc-beqWaB cTtZtu"
  >
    <span
      class="sc-gueYoa gGRAZe"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;
